--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@vee-validate/zod": "^4.15.1",
+    "chart.js": "^4.5.0",
     "dayjs": "^1.11.18",
     "pinia": "^3.0.3",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1",
     "vuetify": "^3.10.0",
     "zod": "^4.1.8"
