--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1",
     "vuetify": "^3.10.0",
+    "xlsx": "file:vendor/xlsx-0.20.3.tgz",
     "zod": "^4.1.8"
   },
   "devDependencies": {
