--- a/server/env.example
+++ b/server/env.example
@@ -12,4 +12,11 @@ DATABASE_NAME=employee-management-system
 # Comma-separated CORS origins
 CORS_ORIGINS=http://localhost:5173
 
+# JWT Settings
+# IMPORTANT: Generate a secure random key for production!
+# You can generate one with: openssl rand -hex 32
+JWT_SECRET_KEY=your-secret-key-here-change-in-production
+JWT_ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=60
+
 
