--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,4 +9,7 @@ python-dotenv==1.0.0
 pandas==2.1.4
 numpy==1.26.2
 python-dateutil==2.8.2
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 
